rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__error__tests__missing_right_curly_bracket-4.snap
---
source: src/nasl/syntax/error.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (missing_right_curly_bracket), \"function a() { a = 2;\")"
snapshot_kind: text
---
error: Unclosed token: '{'
  ┌─ missing_right_curly_bracket:1:1
  │
1 │ function a() { a = 2;
  │ ^ Unclosed token: '{'
