rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__error__tests__missing_right_curly_bracket.snap
---
source: src/nasl/syntax/error.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (missing_right_curly_bracket), \"if (a) { a = 2\")"
snapshot_kind: text
---
[
    SyntaxError {
        kind: UnclosedToken(
            Token {
                kind: LeftCurlyBracket,
                position: (
                    7,
                    8,
                ),
            },
        ),
        range: 0..0,
    },
]
